# WordEmbedding

./: .gitignore  CMakeLists.txt  README.md
data/: antonyms.txt  countries.txt  ngrampaper.txt  speeches.txt  synonyms.txt  warandpeace.txt
data/reuters21578/: all-orgs-strings.lc.txt  all-people-strings.lc.txt
src/: Corpus.cpp  Corpus.hxx  Embedding.cpp  Embedding.hxx  EmbeddingEvaluator.cpp  EmbeddingEvaluator.hxx  Utils.hxx  main.cpp
